@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian BOINC Maintainers <pkg-boinc-devel@lists.alioth.debian.org>
 Uploaders: Steffen Moeller <moeller@pzr.uni-rostock.de>, Frank S. Thomas <frank@thomas-alfeld.de>
 Standards-Version: 3.6.2
-Build-Depends: @cdbs@, libmysqlclient15-dev, freeglut3-dev, libsm-dev, libice-dev, libxmu-dev, libxi-dev, libx11-dev, libjpeg62-dev, libwxgtk2.6-dev, automake1.9 (>= 1.9.3), autoconf (>= 2.59), docbook2x, docbook-xml
+Build-Depends: @cdbs@, python, libmysqlclient15-dev, freeglut3-dev, libsm-dev, libice-dev, libxmu-dev, libxi-dev, libx11-dev, libjpeg62-dev, libwxgtk2.6-dev, automake1.9 (>= 1.9.3), autoconf (>= 2.59), docbook2x, docbook-xml
 
 Package: boinc-client
 Section: non-free/net
@@ -42,7 +42,7 @@ Description: control and monitor utility for the BOINC core client
 Package: boinc-server
 Section: non-free/net
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${python:Depends}
 Description: BOINC server applications and data files
  none
 
